-css fixes Ammit suggested

--- a/LP2/css/main.css
+++ b/LP2/css/main.css
@@ -13381,7 +13381,7 @@ ul.elementor-nav-menu--dropdown a:hover {
         max-width: 56%
     }
     .elementor-978 .elementor-element.elementor-element-xtkicd4>.elementor-widget-container {
-        margin: -49px 22px 0 0
+        margin: -19px 22px 0 40px;
     }
     .elementor-978 .elementor-element.elementor-element-kdoqw2w .elementor-heading-title {
         font-size: 22px
@@ -29905,8 +29905,8 @@ img.wp-smiley, img.emoji {
         padding: 0;
     }
     .main_form .form_content ul li {
-        width: 94%;
-        margin: 0 3% 10px 3%;
+        width: 100%;
+        margin: 0 0 10px;
     }
     .main_form .form_content ul li input {
         height: 40px;
@@ -29916,15 +29916,18 @@ img.wp-smiley, img.emoji {
     .main_form .form_content {
         width: 100%;
     }
+    .main_form .form_content ul {
+        padding:0;
+        margin:0;
+    }
     .main_form .form_content ul li input {
-        width: 93%;
+        width: 100%;
     }
     .main_form .btn_holder img {
         float: left;
         width: 97%;
     }
     .custom-embed {
-        padding: 15px 10%;
-        background: #f3f3f3;
+        padding: 20px 25px;
     }
 }
