--- a/LP3/css/slider.css
+++ b/LP3/css/slider.css
@@ -304,9 +304,12 @@
     }
     #slides .slide_details .slider_content {
         width: 100%;
-        font-size: 20px;
+        font-size: 14px;
         text-align: center;
         padding: 15px 0 0 0;
+    }
+    #slides .slide_details .slider_content strong {
+        font-size:16px;
     }
 }
 
