--- a/Lp1/css/main.css
+++ b/Lp1/css/main.css
@@ -13381,7 +13381,7 @@ ul.elementor-nav-menu--dropdown a:hover {
         max-width: 56%
     }
     .elementor-978 .elementor-element.elementor-element-xtkicd4>.elementor-widget-container {
-        margin: -49px 22px 0 0
+        margin: -19px 22px 0 40px;
     }
     .elementor-978 .elementor-element.elementor-element-kdoqw2w .elementor-heading-title {
         font-size: 22px
@@ -29920,11 +29920,18 @@ img.wp-smiley, img.emoji {
     .main_form .form_content {
         width: 100%;
     }
+    .main_form .form_content ul {
+        padding:0;
+        margin:0;
+    }
     .main_form .form_content ul li input {
-        width: 93%;
+        width: 100%;
     }
     .main_form .btn_holder img {
         float: left;
         width: 97%;
+    }
+    .custom-embed {
+        padding: 20px 25px;
     }
 }
