--- a/Lp1Widget/css/main.css
+++ b/Lp1Widget/css/main.css
@@ -15,6 +15,11 @@ body {
     -moz-osx-font-smoothing: grayscale
 }
 
+.wait-class{
+    cursor: not-allowed !important;
+    background-color: grey !important;
+}
+
 @keyframes a {
     0% {
         transform: rotate(0deg)
