-slider fix in home page

--- a/Gd-energies/css/settings.css
+++ b/Gd-energies/css/settings.css
@@ -224,6 +224,17 @@ website:   	http://www.themepunch.com
 }
 
 
+.tp-revslider-mainul >li,
+.rev_slider >ul >li,
+.rev_slider >ul >li:before,
+.tp-revslider-mainul >li:before,
+.tp-simpleresponsive >ul >li,
+.tp-simpleresponsive >ul >li:before,
+.tp-revslider-mainul >li,
+.tp-simpleresponsive >ul >li { 
+	visibility:hidden; 
+}
+
 .tp-revslider-slidesli,
 .tp-revslider-mainul	{	
 	padding:0 !important; 
@@ -1304,3 +1315,4 @@ https://una.im/CSSgram/
 .tp-kbimg-wrap:before,
 .tp-kbimg-wrap:after {height:500%;width:500%}
 
+#us_grid_1 .w-grid-item-h{}#us_grid_1 .usg_post_content_1{font-size:14px;line-height:1.7}#us_grid_1 .usg_hwrapper_1{}#us_grid_1 .usg_post_image_1{width:4rem; flex-shrink:0}#us_grid_1 .usg_vwrapper_1{}#us_grid_1 .usg_post_custom_field_1{font-weight:bold}#us_grid_1 .usg_post_custom_field_2{font-size:0.9rem;color:#999999}#us_grid_1 .usg_vwrapper_2{border-radius:0.3rem;border-color:#ebebeb}#us_grid_1 .usg_vwrapper_2{transition-duration:0.3s;transform:scale(1) translate(0%,0%)}#us_grid_1 .w-grid-item-h:hover .usg_vwrapper_2{transform:scale(1) translate(0%,0%);opacity:1;border-color:#f9a02c}#us_grid_1 .usg_hwrapper_1{margin-top:1rem}#us_grid_1 .usg_post_image_1{margin-right:1rem}#us_grid_1 .usg_post_custom_field_1{margin-bottom:0}#us_grid_1 .usg_vwrapper_2{border-style:solid; border-width:0;border-width:2px;padding:2rem}
