-mobile phone validation in widget.

--- a/Lp1Widget/css/callpage-callback.default.css
+++ b/Lp1Widget/css/callpage-callback.default.css
@@ -102,7 +102,7 @@
       fill: #4267A9 !important;
     }
   
-  #m_warnning {
+  #callpage .m_warnning {
     color: #97632B;
     padding-left:10px;
     font-size:11px;
