--- a/Gd-energies/css/base.css
+++ b/Gd-energies/css/base.css
@@ -1214,6 +1214,7 @@ button {
 	width: 100% !important
 }
 .slider-form .gform_body ul li .ginput_container {
+	position:relative;
 	float: left !important;
 	width: 100% !important
 }
