--- a/iframe.css
+++ b/iframe.css
@@ -109,12 +109,13 @@ button, input[type=submit] {
     margin-bottom: 25px;
 }
 .custom-cf.style-cf-1 .cf-item {
-    width: 31.5%;
+    width: 25.5%;
     margin-right: 1.25%;
     float:left;
 }
 .wpcf7-form-control-wrap {
     position: relative;
+    float:left;
 }
 .custom-cf .cf-item input {
     width: 100%;
@@ -172,8 +173,8 @@ button, input[type=submit] {
 }
 
 .cf-reg-input {
-    float: none !important;
-    width: 100% !important;
+    //float: none !important;
+    width: 32% !important;
     margin-bottom: 20px;
 }
 
